--- a/Project2D/Project2D.csproj
+++ b/Project2D/Project2D.csproj
@@ -48,6 +48,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AABB.cs" />
     <Compile Include="CollisionManager.cs" />
     <Compile Include="Game.cs" />
     <Compile Include="GameObject.cs" />
