--- a/Project2D/Project2D.csproj
+++ b/Project2D/Project2D.csproj
@@ -54,6 +54,7 @@
     <Compile Include="GameObject.cs" />
     <Compile Include="Level.cs" />
     <Compile Include="Program.cs" />
+    <Compile Include="Projectile.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Ray.cs" />
     <Compile Include="Renderer.cs" />
